# web-tools

./: .gitignore  README.md  index.html  package.json  tsconfig.json
.github/workflows/: main.yml
public/libs/: prism.css  prism.js
src/: App.tsx  index.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: foundation.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: index.rs
src/components/code/: CodeHightlighter.tsx  TextEditor.tsx
src/components/containers/: Accordion.tsx
src/components/embed/: Embed.tsx
src/components/icons/: Pause.tsx  Play.tsx  Refresh.tsx  Save.tsx  Stop.tsx
src/components/layout/: Accordion.tsx  Footer.tsx  Frame.tsx
src/components/toasts/: Snackbar.tsx
src/constants/: index.ts
src/hooks/: local.ts
src/theme/: theme.ts
src/tools/: CharacterCounter.tsx  JsonValidatorFormatter.tsx  Kanban.tsx  LLMApiPrompter.tsx  MultiTimer.tsx  QuickList.tsx  QuickNotes.tsx  QuickTabs.tsx  SpeakIt.tsx  Stopwatch.tsx
src/tools/JsonCreator/: JsonCreator.tsx  index.ts
src/tools/JsonStringifier/: JsonStringifier.tsx  index.ts
src/tools/JsonValidatorFormatter/: JsonTreeView.tsx  JsonValidatorFormatter.tsx  index.ts
src/tools/MultiTimer/: MultiTimer.tsx  index.ts
src/tools/MusicPlayer/: AudioPlayer.tsx  MusicPlayer.tsx  YoutubePlayer.tsx
src/tools/QrGenerator/: QrGenerator.tsx  index.ts
src/tools/QrScanner/: QrScanner.tsx
src/tools/QuickNotes/: QuickNotes.tsx  index.ts
src/tools/SpeakIt/: SpeakIt.tsx  index.ts
src/tools/VoiceNotes/: VoiceNotes.tsx  (+1 more)
src/utils/: url.ts  voice.ts
(+1 files in other folders)
