[package]
name = "tools"
version = "0.0.0"
description = "A Tauri Tools App"
authors = ["tihomir-selak"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.79.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tools_lib"
crate-type = ["lib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }
tauri-cli = "2.0.0-beta.20"

[dependencies]
tauri = { version = "2.0.0-beta.22", features = [] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
